fix: align search input

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,6 +1,8 @@
 .header {
+  position: relative;
+
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
 
   height: 4.4rem;
