--- a/src/components/SearchInput/search-input.module.scss
+++ b/src/components/SearchInput/search-input.module.scss
@@ -1,21 +1,23 @@
 @use '../../sass/abstracts/variables.module' as variables;
 
 .input {
-  position: relative;
+  position: absolute;
+  left: variables.$content-left-spacing;
 
   width: 83rem;
   height: 4.4rem;
-  padding: 0 2.3rem;
 
   background-color: variables.$color-background-m;
   background-image: url('../../assets/icons/search-icon.svg');
   background-repeat: no-repeat;
   background-size: 1.9rem 1.9rem;
-  background-position: right 1.7rem top 1.3rem;
+  background-position: right 1.779rem top 1.3rem;
   border: none;
   border-radius: 22px;
 
   &::placeholder {
+    font-size: 1.6rem;
     color: variables.$color-text-m;
+    transform: translate(2.2rem, 1px);
   }
 }
