--- a/src/sass/abstracts/variables.module.scss
+++ b/src/sass/abstracts/variables.module.scss
@@ -1,3 +1,5 @@
+// Colors
+
 $color-background-s: #ffffff;
 $color-background-m: rgba(235, 235, 235, 0.3);
 
@@ -10,3 +12,5 @@ $color-text-xxl: #000000;
 
 $color-accent: #ff0000;
 
+// Layout
+$content-left-spacing: 25.5rem;
